--- a/src/sass/components/_tabs.scss
+++ b/src/sass/components/_tabs.scss
@@ -24,10 +24,12 @@
 
             > a {
                 display: block;
+                min-width: 2em;
                 margin-right: 2px;
                 padding: $tab-padding-vertical $tab-padding-horizontal;
                 border: 1px solid transparent;
                 border-radius: $border-radius-base $border-radius-base 0 0;
+                text-align: center;
 
                 &:hover,
                 &:focus {
